# Trading-Engine

./: CMakeLists.txt  README.md
src/: main.cpp  test  test.cpp  test2.cpp
src/Core/: Application.cpp  Application.hpp  Commands.hpp  Events.hpp  FileStream.hpp  Logging.hpp  Order.hpp  OrderBookSnapshot.hpp  Trade.hpp  globals.hpp
src/Data Structures/: SPSC-Queue.hpp  ThreadSafeQueue.hpp
src/Data-Structures/: MPSC_Queue.hpp  SPSC-Queue.hpp  ThreadSafeQueue.hpp
src/Engine/: Audit.hpp  CommandQueue.hpp  Commands.hpp  EventQueue.hpp  Events.hpp  Logger.hpp  MatchingEngine.hpp  MatchingStrategy.cpp  MatchingStrategy.hpp  OrderBook.hpp  OrderBook.inl  OrderBookQuery.cpp  OrderBookQuery.hpp  OrderPointer.hpp  Orderbook.cpp  Orderbook.hpp  Sequencer.hpp  TradingEngine.cpp  TradingEngine.hpp
src/Matching/: Matching.cpp  Matching.hpp  MatchingStrategy.cpp  MatchingStrategy.hpp
src/Memory/: AlignedAlloc.hpp  MemoryUtility.hpp  OwningBuffer.cpp  OwningBuffer.hpp  Pool.hpp
src/Networking/: Client.hpp  Networking.hpp  Server.hpp  SocketCommon.h  TCP-Client.hpp  TCP-Server.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
